# utilities

./: .gitignore  README.md  pyproject.toml
.github/workflows/: calendar-sync.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/milestones/v1.0-phases/01-foundation-pipeline/: 01-01-PLAN.md  01-01-SUMMARY.md  (+3 more)
.planning/phases/01-foundation-pipeline/: 01-03-PLAN.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-production-transcription/: 02-01-PLAN.md  02-01-SUMMARY.md  02-03-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-summarization/: 03-02-PLAN.md  03-02-SUMMARY.md  03-RESEARCH.md  03-UAT.md  03-VERIFICATION.md
.planning/phases/04-polish-resilience/: 04-02-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
calendarsync/: .gitignore  cleanup.py  config.yaml  dedupe_range.py  fix_year.py  requirements.txt  scan_year.py  setup_oauth.py  setup_oauth_sheets.py  sync.py
transcribe/: __init__.py  audio_ingest.py  checkpoint.py  chunker.py  cli.py  errors.py  extractor.py  formatter.py  parallel.py  progress.py  prompts.py  retry.py  summarizer.py  transcriber.py  validators.py
transcribe/context/: __init__.py  loader.py  selector.py
transcribe/exporters/: __init__.py  markdown.py  pdf.py
transcribe/models/: __init__.py  session.py  transcript.py
transcribe/pipeline/: __init__.py  live.py  live_stream.py  run.py
transcribe/recorder/: __init__.py  devices.py  record.py
transcribe/storage/: json_store.py  paths.py
transcribe/summaries/: __init__.py  process_mapping.py
transcribe/tests/: test_audio_input.py  test_context_injection.py  test_export_markdown.py  test_live_transcription.py  test_pdf_export.py  test_pipeline.py  test_process_mapping.py  test_process_markdown.py  test_recorder.py  test_storage.py
(+14 files in other folders)
