[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe-tool"
version = "0.1.0"
description = "CLI tool for transcribing video to text using faster-whisper"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.0",
]

[project.scripts]
transcribe = "transcribe.cli:main"
