[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transcribe-tool"
version = "0.2.0"
description = "CLI for transcribing and summarizing video/audio with faster-whisper, with live recording and PDF export"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.0",
    "pydub>=0.25.1",
    "tqdm>=4.67.0",
    "soundfile>=0.12.1",
    "audioop-lts>=0.2.0",
    "openai>=1.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
pdf = ["markdown>=3.5", "weasyprint>=60.0"]
record = ["sounddevice>=0.4"]
dev = ["pytest>=7.0.0"]

[project.scripts]
transcribe = "transcribe.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["transcribe"]
exclude = ["transcribe/tests/**"]
